<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.pillreminder.PatientsGroup"
    android:orientation="vertical"
    android:background="#6bbafa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patients_group"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="15sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePatientName"
        android:hint="@string/pacient_name"
        android:background="@drawable/edit_box"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePatientPhone"
        android:layout_marginTop="10dp"
        android:hint="@string/pacient_phone"
        android:background="@drawable/edit_box"
        android:paddingLeft="10dp"
        android:numeric="integer" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_selector"
            android:shadowColor="#9B9B9B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btn_add"
            android:id="@+id/btnAddPatient"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold" />

        <Button
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_selector"
            android:shadowColor="#9B9B9B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:id="@+id/btnEditPatient"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_edit"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="2dp"
            android:textStyle="bold" />

        <Button
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_selector"
            android:shadowColor="#9B9B9B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btn_delete"
            android:id="@+id/btnDeletePatient"
            android:layout_gravity="top|right"
            android:layout_weight="1"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="2dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom|center">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewPatients"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:background="@drawable/list_view_oval" />
    </LinearLayout>

</LinearLayout>
