<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PatientDetails"
    android:background="#6bbafa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_details"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:hint="@string/patient_name"
        android:maxLength="14"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editPhone"
        android:layout_alignEnd="@+id/editPhone"
        android:textColor="#000000" />
        android:layout_above="@+id/editPhone"
        android:layout_alignTop="@+id/editPhone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPhone"
        android:maxLength="14"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:numeric="integer"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_patient"
        android:background="@drawable/btn_normal"
        android:id="@+id/btnSign"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/editPhone"
        android:layout_alignRight="@+id/editPhone"
        android:layout_alignEnd="@+id/editPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacient_phone"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />
</RelativeLayout>
